Tighten up spacing Fixed ping to update all not just the successful pings

--- a/halite/app/theme/widgets.css
+++ b/halite/app/theme/widgets.css
@@ -6,8 +6,8 @@
 .widget {
     border: 1px solid #c9c9c9;
     border-radius: 3px;
-    margin-top: 5px;
-    margin-bottom: 5px; 
+    margin-top: 4px;
+    margin-bottom: 4px; 
     background: #fafafa;
 }
 
@@ -23,7 +23,7 @@
 }
 
 .widget .table{
-    margin: 0px;
+    margin: 4px;
     width: 100%;
     background: white;
 }
@@ -86,10 +86,10 @@
     text-shadow:0px 1px #fff;
     border-bottom: 1px solid #ccc;
     border-top: 1px solid #fff;
-        color: #666;
-        font-size: 13px;
-        font-weight: bold;
-        padding: 8px 15px;
+    color: #666;
+    font-size: 13px;
+    font-weight: bold;
+    padding: 4px 15px;
 }
 
 .widget.wblack .widget-head{
